kubernetes/12-network-policy/allow-expense-to-postgres.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: allow-expense-to-postgres

  namespace: expense-dev

spec:

  podSelector:

    matchLabels:

      app: postgres

  ingress:

  - from:

    - podSelector:

        matchLabels:

          app: expense-app

    ports:

    - protocol: TCP

      port: 5432

  policyTypes:

  - Ingress
