kubernetes/12-network-policy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-all
  namespace: expense-dev

spec:

  podSelector: {}

  policyTypes:

  - Ingress

  - Egress
